--- a/Homework 2/Thingiverse/Readme
+++ b/Homework 2/Thingiverse/Readme
@@ -1,1 +1,1 @@
-I made a self (https://www.thingiverse.com/thing:421886) wall mountable by adding screwholes
+I made a shelf (https://www.thingiverse.com/thing:421886) wall mountable by adding screwholes
