--- a/Two Speed Gearbox/Readme
+++ b/Two Speed Gearbox/Readme
@@ -1,1 +1,3 @@
 Two Speed Geabox - a relatively simple mechanism used for modifying the rotating power of the source by using gears with different ratios
+Stage 1 - Created components
+Stage 2 - Designed the body, shafts and bearings
