--- a/Two Speed Gearbox/Readme
+++ b/Two Speed Gearbox/Readme
@@ -2,3 +2,4 @@ Two Speed Geabox - a relatively simple mechanism used for modifying the rotating
 Stage 1 - Created components
 Stage 2 - Designed the body, shafts and bearings
 Stage 3 - Added the 4 gears and the tamper
+Finalized - Added appearances, motion links and motion studies
